--- a/public/register.html
+++ b/public/register.html
@@ -57,12 +57,7 @@
       <div class="grid grid-cols-2 gap-4">
         <div>
           <label for="first-name" class="block text-sm font-medium mb-1">First Name</label>
-          <div class="relative">
-            <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-              <i data-feather="user" class="text-blue-300"></i>
-            </div>
-            <input type="text" id="first-name" required class="input-field pl-10 w-full px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition" placeholder="First name">
-          </div>
+          <input type="text" id="first-name" required class="input-field w-full px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition" placeholder="First name">
         </div>
         <div>
           <label for="last-name" class="block text-sm font-medium mb-1">Last Name</label>
@@ -72,42 +67,22 @@
 
       <div>
         <label for="email" class="block text-sm font-medium mb-1">Email</label>
-        <div class="relative">
-          <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-            <i data-feather="mail" class="text-blue-300"></i>
-          </div>
-          <input type="email" id="email" required class="input-field pl-10 w-full px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition" placeholder="student@example.com">
-        </div>
+        <input type="email" id="email" required class="input-field w-full px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition" placeholder="student@example.com">
       </div>
 
       <div>
         <label for="username" class="block text-sm font-medium mb-1">Username</label>
-        <div class="relative">
-          <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-            <i data-feather="at-sign" class="text-blue-300"></i>
-          </div>
-          <input type="text" id="username" required class="input-field pl-10 w-full px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition" placeholder="Choose username">
-        </div>
+        <input type="text" id="username" required class="input-field w-full px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition" placeholder="Choose username">
       </div>
 
       <div class="grid grid-cols-2 gap-4">
         <div>
           <label for="password" class="block text-sm font-medium mb-1">Password</label>
-          <div class="relative">
-            <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-              <i data-feather="lock" class="text-blue-300"></i>
-            </div>
-            <input type="password" id="password" required minlength="6" class="input-field pl-10 w-full px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition" placeholder="Create password">
-          </div>
+          <input type="password" id="password" required minlength="6" class="input-field w-full px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition" placeholder="Create password">
         </div>
         <div>
           <label for="confirm-password" class="block text-sm font-medium mb-1">Confirm</label>
-          <div class="relative">
-            <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-              <i data-feather="lock" class="text-blue-300"></i>
-            </div>
-            <input type="password" id="confirm-password" required class="input-field pl-10 w-full px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition" placeholder="Confirm password">
-          </div>
+          <input type="password" id="confirm-password" required class="input-field w-full px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition" placeholder="Confirm password">
         </div>
       </div>
 
@@ -125,15 +100,11 @@
       </div>
 
       <div class="flex items-start">
-        <div class="flex items-center h-5">
-          <input id="terms" type="checkbox" required class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
-        </div>
-        <div class="ml-3 text-sm">
-          <label for="terms" class="text-blue-200">I agree to the 
-            <a href="#" class="text-white hover:text-blue-200 underline">Terms of Service</a> and 
-            <a href="#" class="text-white hover:text-blue-200 underline">Privacy Policy</a>
-          </label>
-        </div>
+        <input id="terms" type="checkbox" required class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
+        <label for="terms" class="ml-3 text-sm text-blue-200">
+          I agree to the <a href="#" class="text-white hover:text-blue-200 underline">Terms of Service</a> and 
+          <a href="#" class="text-white hover:text-blue-200 underline">Privacy Policy</a>
+        </label>
       </div>
       
       <div id="error-container"></div>
@@ -152,42 +123,45 @@
   </div>
 
   <script>
-    document.getElementById('registration-form').addEventListener('submit', function(e) {
+    document.getElementById('registration-form').addEventListener('submit', async function(e) {
       e.preventDefault();
       const errorContainer = document.getElementById('error-container');
-      errorContainer.innerHTML = ""; // clear old errors
+      errorContainer.innerHTML = "";
+
+      const password = document.getElementById('password').value;
+      const confirmPassword = document.getElementById('confirm-password').value;
+
+      if (password !== confirmPassword) {
+        showError("Passwords do not match!");
+        return;
+      }
 
       const studentData = {
         firstName: document.getElementById('first-name').value.trim(),
         lastName: document.getElementById('last-name').value.trim(),
         email: document.getElementById('email').value.trim(),
         username: document.getElementById('username').value.trim(),
-        password: document.getElementById('password').value,
-        class: document.getElementById('class').value,
-        registrationDate: new Date().toISOString(),
-        rp: 0,
-        tier: 'Bronze',
-        completedQuizzes: [],
-        watchedVideos: []
+        password: password,
+        class: document.getElementById('class').value
       };
 
-      if (studentData.password !== document.getElementById('confirm-password').value) {
-        showError("Passwords do not match!");
-        return;
+      try {
+        const res = await fetch("https://your-backend-url.onrender.com/register", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(studentData)
+        });
+        const data = await res.json();
+
+        if (data.success) {
+          alert("Registration successful! You can now login.");
+          window.location.href = "index.html";
+        } else {
+          showError(data.message || "Registration failed");
+        }
+      } catch (err) {
+        showError("Server error. Please try again later.");
       }
-
-      const students = JSON.parse(localStorage.getItem('vikas-students')) || [];
-
-      if (students.some(student => student.username === studentData.username)) {
-        showError("Username already exists!");
-        return;
-      }
-
-      students.push(studentData);
-      localStorage.setItem('vikas-students', JSON.stringify(students));
-
-      alert("Registration successful! You can now login.");
-      window.location.href = "index.html";
 
       function showError(msg) {
         const p = document.createElement("p");
