--- a/public/index.html
+++ b/public/index.html
@@ -111,66 +111,64 @@
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
 
   <script>
-    // Initialize AOS + BG
-    window.addEventListener("load", () => {
-      AOS.init({ duration: 1000 });
-      feather.replace();
-      VANTA.NET({
-        el: "#background",
-        mouseControls: true,
-        touchControls: true,
-        color: 0x6366f1,
-        backgroundColor: 0x0
-      });
+  // Initialize AOS + BG
+  window.addEventListener("load", () => {
+    AOS.init({ duration: 1000 });
+    feather.replace();
+    VANTA.NET({
+      el: "#background",
+      mouseControls: true,
+      touchControls: true,
+      color: 0x6366f1,
+      backgroundColor: 0x0
     });
+  });
 
-    // Hash function
-    async function hashPassword(password) {
-      const msgBuffer = new TextEncoder().encode(password);
-      const hashBuffer = await crypto.subtle.digest("SHA-256", msgBuffer);
-      return Array.from(new Uint8Array(hashBuffer))
-        .map((b) => b.toString(16).padStart(2, "0"))
-        .join("");
+  const loginForm = document.getElementById("login-form");
+  const errorMsg = document.getElementById("error-msg");
+
+  loginForm.addEventListener("submit", async (e) => {
+    e.preventDefault();
+
+    const username = document.getElementById("username").value.trim();
+    const password = document.getElementById("password").value.trim();
+    const rememberMe = document.getElementById("rememberMe").checked;
+
+    if (!username || !password) {
+      errorMsg.textContent = "⚠️ Both fields are required!";
+      errorMsg.classList.remove("hidden");
+      return;
     }
 
-    // Login handler
-    const loginForm = document.getElementById("login-form");
-    const errorMsg = document.getElementById("error-msg");
+    try {
+      const res = await fetch("/login", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ username, password }),
+      });
 
-    loginForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const username = document.getElementById("username").value.trim();
-      const password = document.getElementById("password").value.trim();
-      const rememberMe = document.getElementById("rememberMe").checked;
+      const result = await res.json();
 
-      if (!username || !password) {
-        errorMsg.textContent = "⚠️ Both fields are required!";
-        errorMsg.classList.remove("hidden");
-        return;
-      }
-
-      const students = JSON.parse(localStorage.getItem("vikas-students")) || [];
-      const hashedPassword = await hashPassword(password);
-
-      const user = students.find(
-        (student) =>
-          student.username.toLowerCase() === username.toLowerCase() &&
-          student.password === hashedPassword
-      );
-
-      if (user) {
+      if (result.success) {
+        // save user info in local/session storage
         if (rememberMe) {
-          localStorage.setItem("current-student", JSON.stringify(user));
+          localStorage.setItem("current-student", JSON.stringify(result.user));
         } else {
-          sessionStorage.setItem("current-student", JSON.stringify(user));
+          sessionStorage.setItem("current-student", JSON.stringify(result.user));
         }
+
         alert("✅ Login successful!");
-        window.location.href = "dashboard.html"; // Make sure this file exists
+        window.location.href = "dashboard.html"; // redirect after login
       } else {
-        errorMsg.textContent = "❌ Invalid username or password!";
+        errorMsg.textContent = "❌ " + result.message;
         errorMsg.classList.remove("hidden");
       }
-    });
-  </script>
+    } catch (err) {
+      errorMsg.textContent = "⚠️ Server error!";
+      errorMsg.classList.remove("hidden");
+    }
+  });
+</script>
+
 </body>
 </html>
