--- a/public/index.html
+++ b/public/index.html
@@ -147,11 +147,12 @@
         }
 
         try {  // <-- add this
-    const res = await fetch("http://localhost:5000/login", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ username, password }),
-    });
+    const res = await fetch("/login", {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({ username, password }),
+});
+
 
 
           const result = await res.json();
